# cola-proof

./: .dockerignore  .gitignore  APPROACH.md  CLAUDE.md  Dockerfile  README.md  cola-proof-spec.md  docker-compose.yml  implementation-plan.md  pyproject.toml
server/: app.py  config.py  export.py  store.py
server/pipeline/: extract_labels.py  match.py  ocr.py  parse_form.py  runner.py  vision.py  warning.py
tests/: test_api.py  test_corpus.py  test_corpus_applications.py  test_e2e_ocr.py  test_export.py  test_match.py  test_ocr.py  test_store.py  test_vision.py  test_warning.py
web/: index.html  package-lock.json  package.json
web/src/: api.ts  index.css  main.tsx  plain.ts
web/src/screens/: Batch.tsx  Detail.tsx  Upload.tsx
