[project]
name = "cola-proof"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.41.1",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.32",
    "rapidfuzz>=3.14.5",
    "reportlab>=4.5.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
